testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__composite-index-first-column-only.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, order_date, total_amount
      FROM orders
      WHERE customer_id = 100;
info:
  statement_type: SELECT
  tables:
  - orders
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH orders USING INDEX idx_orders_customer_date
