testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__composite-index-full-usage.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, status, total_amount
      FROM orders
      WHERE customer_id = 100 AND order_date = '2024-01-15';
info:
  statement_type: SELECT
  tables:
  - orders
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH orders USING INDEX idx_orders_customer_date

BYTECODE
addr  opcode           p1  p2  p3  p4                p5  comment
   0  Init              0  15   0                     0  Start at 15
   1  OpenRead          0   6   0  k(6,B,B,B,B,B,B)   0  table=orders, root=6, iDb=0
   2  OpenRead          1   7   0  k(3,B,B)           0  index=idx_orders_customer_date, root=7, iDb=0
   3  Integer         100   4   0                     0  r[4]=100
   4  String8           0   5   0  2024-01-15         0  r[5]='2024-01-15'
   5  SeekGE            1  14   4                     0  key=[4..5]
   6    IdxGT           1  14   4                     0  key=[4..5]
   7    DeferredSeek    1   0   0                     0
   8    IdxRowId        1   1   0                     0  r[1]=cursor 1 for index idx_orders_customer_date.rowid
   9    Column          0   3   2                     0  r[2]=orders.status
  10    Column          0   4   3                     0  r[3]=orders.total_amount
  11    RealAffinity    3   0   0                     0
  12    ResultRow       1   3   0                     0  output=r[1..3]
  13  Next              1   6   0                     0
  14  Halt              0   0   0                     0
  15  Transaction       0   1  14                     0  iDb=0 tx_mode=Read
  16  Goto              0   1   0                     0
