testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__composite-index-second-column-only.snap
---
source: indexes.sqltest
expression: "SELECT id, customer_id, total_amount\n    FROM orders\n    WHERE order_date = '2024-01-15';"
info:
  statement_type: SELECT
  tables:
    - orders
  setup_blocks:
    - schema
  database: ":memory:"
---
QUERY PLAN
`--SCAN orders

BYTECODE
addr  opcode          p1  p2  p3  p4                p5  comment
   0  Init             0  12   0                     0  Start at 12
   1  OpenRead         0   6   0  k(6,B,B,B,B,B,B)   0  table=orders, root=6, iDb=0
   2  Rewind           0  11   0                     0  Rewind table orders
   3    Column         0   2   5                     0  r[5]=orders.order_date
   4    Ne             5   6  10  Binary             0  if r[5]!=r[6] goto 10
   5    RowId          0   1   0                     0  r[1]=orders.rowid
   6    Column         0   1   2                     0  r[2]=orders.customer_id
   7    Column         0   4   3                     0  r[3]=orders.total_amount
   8    RealAffinity   3   0   0                     0
   9    ResultRow      1   3   0                     0  output=r[1..3]
  10  Next             0   3   0                     0
  11  Halt             0   0   0                     0
  12  Transaction      0   1  14                     0  iDb=0 tx_mode=Read
  13  String8          0   6   0  2024-01-15         0  r[6]='2024-01-15'
  14  Goto             0   1   0                     0
