testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__covering-index-all-columns.snap
---
source: indexes.sqltest
expression: |-
  SELECT warehouse_id, product_id, quantity
      FROM inventory
      WHERE warehouse_id = 1 AND product_id = 500;
info:
  statement_type: SELECT
  tables:
  - inventory
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH inventory USING INDEX idx_inventory_covering

BYTECODE
addr  opcode        p1  p2  p3  p4          p5  comment
   0  Init           0  12   0               0  Start at 12
   1  OpenRead       0  10   0  k(4,B,B,B)   0  index=idx_inventory_covering, root=10, iDb=0
   2  Integer        1   4   0               0  r[4]=1
   3  Integer      500   5   0               0  r[5]=500
   4  SeekGE         0  11   4               0  key=[4..5]
   5    IdxGT        0  11   4               0  key=[4..5]
   6    Column       0   0   1               0  r[1]=idx_inventory_covering.warehouse_id
   7    Column       0   1   2               0  r[2]=idx_inventory_covering.product_id
   8    Column       0   2   3               0  r[3]=idx_inventory_covering.quantity
   9    ResultRow    1   3   0               0  output=r[1..3]
  10  Next           0   5   0               0
  11  Halt           0   0   0               0
  12  Transaction    0   1  14               0  iDb=0 tx_mode=Read
  13  Goto           0   1   0               0
