testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__covering-index-subset.snap
---
source: indexes.sqltest
expression: |-
  SELECT warehouse_id, quantity
      FROM inventory
      WHERE warehouse_id = 1;
info:
  statement_type: SELECT
  tables:
  - inventory
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH inventory USING INDEX idx_inventory_covering
