testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__full-scan-function-on-indexed.snap
---
source: indexes.sqltest
expression: "SELECT id, sku, name FROM products WHERE UPPER(sku) = 'ABC123';"
info:
  statement_type: SELECT
  tables:
    - products
  setup_blocks:
    - schema
  database: ":memory:"
---
QUERY PLAN
`--SCAN products

BYTECODE
addr  opcode       p1  p2  p3  p4                  p5  comment
   0  Init          0  12   0                       0  Start at 12
   1  OpenRead      0   2   0  k(7,B,B,B,B,B,B,B)   0  table=products, root=2, iDb=0
   2  Rewind        0  11   0                       0  Rewind table products
   3    Column      0   1   7                       0  r[7]=products.sku
   4    Function    0   7   5  upper                0  r[5]=func(r[7])
   5    Ne          5   6  10  Binary               0  if r[5]!=r[6] goto 10
   6    RowId       0   1   0                       0  r[1]=products.rowid
   7    Column      0   1   2                       0  r[2]=products.sku
   8    Column      0   2   3                       0  r[3]=products.name
   9    ResultRow   1   3   0                       0  output=r[1..3]
  10  Next          0   3   0                       0
  11  Halt          0   0   0                       0
  12  Transaction   0   1  14                       0  iDb=0 tx_mode=Read
  13  String8       0   6   0  ABC123               0  r[6]='ABC123'
  14  Goto          0   1   0                       0
