testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__full-scan-no-index.snap
---
source: indexes.sqltest
expression: "SELECT id, level, message FROM logs WHERE level = 'ERROR';"
info:
  statement_type: SELECT
  tables:
    - logs
  setup_blocks:
    - schema
  database: ":memory:"
---
QUERY PLAN
`--SCAN logs

BYTECODE
addr  opcode       p1  p2  p3  p4              p5  comment
   0  Init          0  11   0                   0  Start at 11
   1  OpenRead      0  15   0  k(5,B,B,B,B,B)   0  table=logs, root=15, iDb=0
   2  Rewind        0  10   0                   0  Rewind table logs
   3    Column      0   1   5                   0  r[5]=logs.level
   4    Ne          5   6   9  Binary           0  if r[5]!=r[6] goto 9
   5    RowId       0   1   0                   0  r[1]=logs.rowid
   6    Column      0   1   2                   0  r[2]=logs.level
   7    Column      0   4   3                   0  r[3]=logs.message
   8    ResultRow   1   3   0                   0  output=r[1..3]
   9  Next          0   3   0                   0
  10  Halt          0   0   0                   0
  11  Transaction   0   1  14                   0  iDb=0 tx_mode=Read
  12  String8       0   6   0  ERROR            0  r[6]='ERROR'
  13  Goto          0   1   0                   0
