testing/runner/tests/snapshot_tests/indexes/snapshots/indexes__in-clause-multiple-values.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, event_type, severity
      FROM events
      WHERE event_type IN ('ERROR', 'WARNING', 'CRITICAL');
info:
  statement_type: SELECT
  tables:
  - events
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--MULTI-INDEX OR events (idx_events_type, idx_events_type, idx_events_type)
